--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "646e67d3-9d04-4312-a4b2-690a4059c727"
 authors = ["Gianna Marschmann"]
 version = "0.1.0"
 
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+
 [compat]
 julia = "1.6"
 
