--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
